--- a/client/src/css/LogIn.css
+++ b/client/src/css/LogIn.css
@@ -7,13 +7,13 @@
 }
 
 
-.error {
+.errorLogin {
   padding: 1rem;
   background-color: rgb(251, 196, 196);
   text-align: center;
   font-size: small;
   color: red;
-  border: 1px dotted rgb(251, 196, 196);
+  border: 1px dotted red;
   margin-bottom: 2rem;
   margin-top: 1rem;
   border-radius: 1rem;
