--- a/client/src/css/Categorias.css
+++ b/client/src/css/Categorias.css
@@ -127,8 +127,13 @@ input{
 
 .elMsg {
   padding: 0.1rem 1rem 1rem 1rem;
-  color: rgb(5, 63, 5);
+  color: rgb(24, 5, 189);
   font-size: small;
+}
 
- 
+.regresar:hover{
+font-size: 17px;
+cursor: pointer;
+
+font-weight: bold;
 }
