--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -3,7 +3,8 @@
 }
 .content{
     width: 100%;
-    height: 150vh;
+    /*height: 150vh;*/
     background-color:  rgb(37,36,64);
+    height: calc(100vh);
 }
 
