--- a/client/src/css/Categorias.css
+++ b/client/src/css/Categorias.css
@@ -3,7 +3,6 @@
   margin: 2rem;
   background-color: rgb(183, 182, 213);
   padding-bottom: 2rem;
-
 }
 
 .categorias__title {
@@ -12,23 +11,21 @@
   align-items: center;
 }
 
-
 .categorias__titulo {
   font-size: 3rem;
   padding: 2rem;
-  color:  rgb(37,36,64);
+  color: rgb(37, 36, 64);
   text-align: center;
 }
 
 .categorias__boton {
   cursor: pointer;
   font-size: 4rem;
-  
 }
 
 .categorias__tabla {
-  border:0;
-  width:95%;
+  border: 0;
+  width: 95%;
   margin: auto;
   border-collapse: collapse;
   background-color: #fff;
@@ -43,13 +40,13 @@ th {
 }
 
 .categorias__tabla th {
-  background-color: rgb(37,36,64);
+  background-color: rgb(37, 36, 64);
   color: white;
-  
+
   font-size: 1.7rem;
 }
 
-tr:hover{
+tr:hover {
   background-color: rgb(200, 198, 198);
 }
 
@@ -57,13 +54,13 @@ tr:hover{
   cursor: pointer;
 }
 
-td.opciones{
+td.opciones {
   text-align: left;
 }
 
-form.formulario {
-  align-items: center;
-  width: auto; /* Ancho del formulario */
+form.formularioCategoria {
+ align-items: center;
+  width: auto; 
   border: none;
   border-radius: 10px;
   background-color: rgb(183, 182, 213);
@@ -72,17 +69,17 @@ form.formulario {
   
 }
 
-label{
-  font-size: 18px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  display: block;
-  color:  rgb(37,36,64);
-  font-weight: bold;
+label.lblCategoria {
+  /*font-size: 16px;
+  color: black;
+  margin-bottom: 10px;*/
+  font-size: 16px;
+  color: black;
+  align-self: center;
 }
 
-input{
-  padding: 8px; 
+input.inputCategoria {
+  /*padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
@@ -90,6 +87,14 @@ input{
   width: 60%;
   display: block;
   margin-bottom: 10px;
+  margin: 0 auto;
+  margin-top: 10px;*/
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-size: 16px;
+  width: 100%;
 }
 
 .categorias form .elError {
@@ -97,26 +102,29 @@ input{
   color: red;
   font-size: small;
   font-weight: bold;
-  
+
+  text-align: center;
 }
 
-.formulario button {
-  background-color:  rgb(37,36,64);
+.btnCategoria {
+  background-color: rgb(37, 36, 64);
   color: white;
   padding: 12px 20px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
   font-size: 16px;
+  margin: 0 auto;
+  display: block;
+  margin-top: 10px;
 }
 
 .formulario-container {
   margin-right: 30px;
   margin-left: 30px;
- 
 }
 
-.formulario button:hover {
+.btnCategoria:hover {
   background-color: rgb(79, 79, 79);
 }
 
@@ -124,22 +132,33 @@ input{
   padding: 0.1rem 1rem 1rem 1rem;
   color: red;
   font-size: small;
-  font-weight: bold;
+  text-align: center;
+}
+
+.errorCategoryDB {
+  padding: 0.1rem 1rem 1rem 1rem;
+  color: red;
+  font-size: small;
 }
 
 .elMsg {
   padding: 0.1rem 1rem 1rem 1rem;
   color: rgb(24, 5, 189);
   font-size: small;
+  text-align: center;
 }
 
-.regresar:hover{
-font-size: 17px;
-cursor: pointer;
+.regresar:hover {
+  font-size: 17px;
+  cursor: pointer;
 
-font-weight: bold;
+  font-weight: bold;
 }
 
-span.imgOpcion:hover{
+span.imgOpcion:hover {
   font-size: 18px;
+}
+
+hr {
+  border-color: rgb(247, 184, 68);
 }
