--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -7,6 +7,8 @@
 html {
   font-size: 62.5%;
   font-family: 'Roboto', sans-serif;
+  background-color:  rgb(37,36,64);
+    height: calc(100vh);
 }
 
 main {
