--- a/client/src/css/Repuestos.css
+++ b/client/src/css/Repuestos.css
@@ -49,6 +49,7 @@ th {
 
 tr:hover {
   background-color: rgb(200, 198, 198);
+  font-weight: bold;
 }
 
 .elementos__tabla span {
@@ -69,24 +70,28 @@ form.formularioElemento {
   margin-left: 30px;
 }
 
-.lblElemento {
-  font-size: 16px;
-  color: black;
-  align-self: center;
+.contenedorElementos {
+  display: flex;
 }
 
-input,
-select {
+label.lblElemento {
+  color: rgb(37, 36, 64);
+  margin-right: 10px;
+  font-weight: bold;
+  font-size: medium;
+}
+
+
+input.inputElemento,
+select.inputElemento {
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
   font-size: 16px;
-  width: 60%;
-  display: block;
-  margin-bottom: 10px;
-  margin: 0 auto;
+  width: 90%;
   margin-top: 10px;
+  margin-left: auto;
 }
 
 form .elError,
