--- a/client/src/css/Categorias.css
+++ b/client/src/css/Categorias.css
@@ -2,7 +2,7 @@
   border-radius: 1rem;
   margin: 2rem;
   background-color: rgb(183, 182, 213);
-  padding-bottom: 2rem;
+  padding-bottom: 50px;
 }
 
 .categorias__title {
@@ -59,19 +59,18 @@ td.opciones {
 }
 
 form.formularioCategoria {
- align-items: center;
-  width: auto; 
+  align-items: center;
+  width: auto;
   border: none;
   border-radius: 10px;
   background-color: rgb(183, 182, 213);
   margin-right: 30px;
   margin-left: 30px;
-  
 }
 
 .contenedorElementos {
   display: flex;
-  align-items: center; 
+  align-items: center;
 }
 
 label.lblCategoria {
@@ -79,11 +78,10 @@ label.lblCategoria {
   margin-right: 10px;
   font-weight: bold;
   font-size: medium;
-  
 }
 
 input.inputCategoria {
-   padding: 8px;
+  padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
@@ -156,4 +154,56 @@ span.imgOpcion:hover {
 
 hr {
   border-color: rgb(247, 184, 68);
+}
+
+.pagination {
+  margin: 1rem 0 0 2.7rem;
+
+  margin-right: auto;
+  text-align: center;
+}
+
+li.page-item:hover:not(.activo),
+li.page-item-next:hover,
+li.page-item-prev:hover {
+  background-color: gray;
+}
+
+li.page-item {
+  list-style: none;
+  float: left;
+  border: 1px solid gray;
+  padding: 6px 15px;
+  color: black;
+}
+
+li.activo {
+  background-color: rgb(37, 36, 64);
+  list-style: none;
+  float: left;
+  border: 1px solid gray;
+  padding: 6px 15px;
+}
+li.activo a {
+  color: white;
+}
+
+li.page-item-prev {
+  list-style: none;
+  float: left;
+  border: 1px solid gray;
+  padding: 6px 15px;
+  color: black;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+li.page-item-next {
+  list-style: none;
+  float: left;
+  border: 1px solid gray;
+  padding: 6px 15px;
+  color: black;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
