--- a/client/src/css/Repuestos.css
+++ b/client/src/css/Repuestos.css
@@ -73,7 +73,7 @@ form.formularioElemento {
   display: flex;
 }
 
-label.lblElemento {
+span.lblElemento {
   color: rgb(37, 36, 64);
   margin-right: 10px;
   font-weight: bold;
