--- a/client/src/css/Repuestos.css
+++ b/client/src/css/Repuestos.css
@@ -59,6 +59,11 @@ td.opcionesEle span.opciones {
   text-align: center;
 }
 
+.swal2-popup {
+  font-size: 1.2rem;
+  font-family: Georgia, serif;
+}
+
 form.formularioElemento {
   align-items: center;
   width: auto;
