--- a/client/src/css/Repuestos.css
+++ b/client/src/css/Repuestos.css
@@ -1,5 +1,5 @@
 .elementos {
-  border-radius: 1rem;
+  border: 2px solid rgb(247, 184, 68);
   margin: 2rem;
   background-color: rgb(183, 182, 213);
   padding-bottom: 50px;
@@ -61,7 +61,7 @@ td.opcionesEle span.opciones {
 
 
 div.divBuscarElemento {
-  margin: 10px 0 10px 35px;
+  margin: 10px 0 10px 30px;
   font-size: small;
 }
 
@@ -71,6 +71,13 @@ div.divBuscarElemento input.searchInput {
   border-radius: 5px;
   font-size: 16px;
   width: 40%;
+  box-shadow: 2px 3px gray;
+}
+
+div.divBuscarElemento input.searchInput::placeholder {
+  background-image: url("../img/search.png") ;
+  background-repeat: no-repeat;
+   background-position: right center;
 }
 
 .swal2-popup {
@@ -109,7 +116,28 @@ select.inputElemento {
   width: 90%;
   margin-top: 10px;
   margin-left: auto;
+  box-shadow: 2px 3px gray;
 }
+
+#valorElemento::placeholder {
+  background-image: url("../img/price.png") ;
+  background-repeat: no-repeat;
+   background-position: right center;
+}
+
+#nombreElemento::placeholder {
+  background-image: url("../img/spare.png") ;
+  background-repeat: no-repeat;
+   background-position: right center;
+}
+
+#descripcionElemento::placeholder {
+  background-image: url("../img/description.png") ;
+  background-repeat: no-repeat;
+   background-position: right center;
+}
+
+
 
 form .elError,
 .errorElement {
